[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Denise Avila <denisefavila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
black = "^24.10.0"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
